BaSP-W04-2022:Fixed main-info-about overflow

--- a/Semana-04/assets/css/main.css
+++ b/Semana-04/assets/css/main.css
@@ -498,7 +498,9 @@
     }
 
     .main-info-about    {
-        margin-left: 15%;
+        margin: auto;
+        padding-left: 12%;
+        width: 80%;
     }
 
     .main-contact-us    {
